--- a/BackEnd/Domains/Products/CreateProduct/.env
+++ b/BackEnd/Domains/Products/CreateProduct/.env
@@ -1,2 +1,14 @@
 MONGO_URI=mongodb+srv://admin:1234PDistribuida@category.dloun.mongodb.net/product_db?retryWrites=true&w=majority
-APP_PORT=80
+PORT=8080
+GRAPHQL_GATEWAY_URL=http://localhost:4000/graphql
+
+
+
+
+# Nombre de la base de datos
+DB_NAME=product_db
+
+
+# Configuración de AWS Cognito (para validación de JWT)
+COGNITO_REGION=us-east-1
+COGNITO_USER_POOL_ID=us-east-1_JudMXeuR1
