--- a/.github/workflows/deploy-front-end.yml
+++ b/.github/workflows/deploy-front-end.yml
@@ -3,7 +3,7 @@ name: Deploy frontend
 on:
   push:
     branches:
-      - Fix_Merge_Repository8
+      - Fix_Merge_Repository
     paths:
       - 'FrontEnd/employee-app/**'
 
