--- a/BackEnd/Domains/Products/GetProductsByCategory/.env
+++ b/BackEnd/Domains/Products/GetProductsByCategory/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://admin:1234PDistribuida@category.dloun.mongodb.net/product_db?retryWrites=true&w=majority
-APP_PORT=80
+PORT=3001
+MONGO_DBNAME=product_db
