--- a/BackEnd/Domains/GraphQL-Gateway/src/.env
+++ b/BackEnd/Domains/GraphQL-Gateway/src/.env
@@ -1,4 +1,5 @@
 PORT=4000
 CATEGORY_SERVICE_URL=http://localhost:3000
+PRODUCT_SERVICE_URL=http://localhost:3001
 JWT_ISSUER=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_JudMXeuR1
 JWKS_URI=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_JudMXeuR1/.well-known/jwks.json
