--- a/.github/workflows/deploy-category-get_all.yml
+++ b/.github/workflows/deploy-category-get_all.yml
@@ -3,7 +3,7 @@ name: Deploy get_all-category
 on:
     push:
         branches:
-            - Fix_Merge_Repository
+            - Fix_BackEnd_GraphQL_DeleteCategory
         paths:
             - 'BackEnd/Domains/Categories/GetAllCategories/**'
 jobs:
