--- a/.github/workflows/deploy-graphql-up.yml
+++ b/.github/workflows/deploy-graphql-up.yml
@@ -3,7 +3,7 @@ name: Deploy graphQL-deploy
 on:
     push:
         branches:
-            - Fix_Merge_Repository
+            - Fix_BackEnd_GraphQL_DeleteCategory
         paths:
             - 'BackEnd/Domains/GraphQL-Gateway/**'
 jobs:
@@ -42,6 +42,9 @@ jobs:
             sudo docker rm graphql-gateway || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
             sudo docker run -d --name graphql-gateway --network host \
-              -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/category" \
-              -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}/products/by-category" \
+              -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/api/category" \
+              -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}/products/category" \
+              -e PORT=4000\
+              -e JWT_ISSUER="https://cognito-idp.us-east-1.amazonaws.com/us-east-1_JudMXeuR1" \
+              -e JWKS_URI="https://cognito-idp.us-east-1.amazonaws.com/us-east-1_JudMXeuR1/.well-known/jwks.json" \
               ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
