--- a/.github/workflows/deploy-product-get_by_category.yml
+++ b/.github/workflows/deploy-product-get_by_category.yml
@@ -3,7 +3,7 @@ name: Deploy get_ByCategory-product
 on:
     push:
         branches:
-            - Fix_Merge_Repository
+            - Fix_BackEnd_GraphQL_DeleteCategory
         paths:
             - 'BackEnd/Domains/Products/GetProductsByCategory/**'
 jobs:
@@ -43,4 +43,5 @@ jobs:
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
             sudo docker run -d --name get-products-by-category --network host \
               -e MONGO_URI="${{ secrets.MONGO_URI_PRODUCT }}" \
+              -e MONGO_DBNAME="product_db"
               ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
