--- a/.github/workflows/deploy-graphql-up.yml
+++ b/.github/workflows/deploy-graphql-up.yml
@@ -41,9 +41,9 @@ jobs:
             sudo docker stop graphql-gateway || true
             sudo docker rm graphql-gateway || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
-            sudo docker run -d --name graphql-gateway --network host \
+            sudo docker run -d --name graphql-gateway -p 4000:4000 \
               -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/api/category" \
-              -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}/products/category" \
+              -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}:3001/products/category" \
               -e PORT=4000\
               -e JWT_ISSUER="https://cognito-idp.us-east-1.amazonaws.com/us-east-1_JudMXeuR1" \
               -e JWKS_URI="https://cognito-idp.us-east-1.amazonaws.com/us-east-1_JudMXeuR1/.well-known/jwks.json" \
