--- a/.github/workflows/deploy-product-get_by_category.yml
+++ b/.github/workflows/deploy-product-get_by_category.yml
@@ -41,8 +41,7 @@ jobs:
             sudo docker stop get-products-by-category || true
             sudo docker rm get-products-by-category || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
-            sudo docker run -d --name get-products-by-category --network host \
+            sudo docker run -d --name get-products-by-category -p 3001:3001 \
               -e MONGO_URI="${{ secrets.MONGO_URI_PRODUCT }}" \
               -e MONGO_DBNAME="product_db" \
-              -p 3001:3001 \
               ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
