--- a/.github/workflows/deploy-category-delete.yml
+++ b/.github/workflows/deploy-category-delete.yml
@@ -41,8 +41,8 @@ jobs:
             sudo docker stop delete-category || true
             sudo docker rm delete-category || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
-            sudo docker run -d --name delete-category --network host \
+            sudo docker run -d --name delete-category -p 5000:5000 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
               -e GRAPHQL_SERVICE_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
-              -e PORT=PORT=5000 \
+              -e PORT=5000 \
               ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
