--- a/.github/workflows/deploy-category-get_by_id.yml
+++ b/.github/workflows/deploy-category-get_by_id.yml
@@ -3,7 +3,7 @@ name: Deploy get_ByID-category
 on:
     push:
         branches:
-            - Fix_Merge_Repository
+            - Fix_BackEnd_GraphQL_DeleteCategory
         paths:
             - 'BackEnd/Domains/Categories/GetCategoryById/**'
 jobs:
@@ -43,6 +43,6 @@ jobs:
             sudo docker stop get-byid-category || true
             sudo docker rm get-byid-category || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
-            sudo docker run -d --name get-byid-category --network host \
+            sudo docker run -d --name get-byid-category -p 3000:3000 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
               ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
