--- a/.github/workflows/deploy-category-create.yml
+++ b/.github/workflows/deploy-category-create.yml
@@ -3,7 +3,7 @@ name: Deploy create-category
 on:
     push:
         branches:
-            - Feature_BackEnd_CategoryDomain_AddMicroservice_DeleteCategory
+            - Fix_Merge_Repository
         paths:
             - 'BackEnd/Domains/Categories/CreateCategory/**'
 jobs:
