fix: :bug: Fix env variables

--- a/.github/workflows/deploy-product-create.yml
+++ b/.github/workflows/deploy-product-create.yml
@@ -44,4 +44,8 @@ jobs:
             sudo docker run -d --name create-product -p 6001:6001 \
               -e MONGO_URI="${{ secrets.MONGO_URI_PRODUCT }}" \
               -e GRAPHQL_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
+              -e PORT=6001 \
+              -e DB_NAME:"product_db" \
+              -e COGNITO_REGION="us-east-1" \
+              -e COGNITO_USER_POOL_ID="us-east-1_JudMXeuR1" \
               ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
