--- a/.github/workflows/deploy-product-create.yml
+++ b/.github/workflows/deploy-product-create.yml
@@ -3,7 +3,7 @@ name: Deploy create-product
 on:
     push:
         branches:
-            - Fix_BackEnd_GraphQL_DeleteCategory
+            - Fix_Merge_Repository
         paths:
             - 'BackEnd/Domains/Products/CreateProduct/**'
 jobs:
