--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline for employee Services
 on:
   push:
     branches:
-      - Fix_Merge_Repository
+      - Fix_Merge_Repository2
       
 jobs:
   build-and-push-createEmployee:
