feat: :sparkles: config front product

--- a/.github/workflows/deploy-front-end.yml
+++ b/.github/workflows/deploy-front-end.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
 
-      - Fix_Merge_Repository
+      - Fix_Merge_Repository2
     paths:
       - 'FrontEnd/employee-app/**'
 
