--- a/.github/workflows/deploy-category-update.yml
+++ b/.github/workflows/deploy-category-update.yml
@@ -3,7 +3,7 @@ name: Deploy update-category
 on:
     push:
         branches:
-            - Feature_BackEnd_CategoryDomain_AddMicroservice_DeleteCategory
+            - Fix_Merge_Repository
         paths:
             - 'BackEnd/Domains/Categories/UpdateCategory/**'
 jobs:
@@ -41,6 +41,6 @@ jobs:
             sudo docker stop update-category || true
             sudo docker rm update-category || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/update-category:latest
-            sudo docker run -d --name update-category --network host \
+            sudo docker run -d --name update-category -p 3002:3002 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
               ${{ secrets.DOCKERHUB_USERNAME }}/update-category:latest
