feat: :sparkles: config

--- a/.github/workflows/deploy-product-update.yml
+++ b/.github/workflows/deploy-product-update.yml
@@ -3,7 +3,7 @@ name: Deploy update-product
 on:
     push:
         branches:
-            - Feature_BackEnd_CategoryDomain_AddMicroservice_DeleteCategory
+            - Fix_Merge_Repository
         paths:
             - 'BackEnd/Domains/Products/UpdateProduct/**'
 jobs:
