--- a/.github/workflows/deploy-product-delete.yml
+++ b/.github/workflows/deploy-product-delete.yml
@@ -3,7 +3,7 @@ name: Deploy delete-product
 on:
     push:
         branches:
-            - Feature_BackEnd_CategoryDomain_AddMicroservice_DeleteCategory
+            - Fix_Merge_Repository
         paths:
             - 'BackEnd/Domains/Products/DeleteProduct/**'
 jobs:
