--- a/.github/workflows/deploy-product-get_by_category.yml
+++ b/.github/workflows/deploy-product-get_by_category.yml
@@ -3,7 +3,7 @@ name: Deploy get_ByCategory-product
 on:
     push:
         branches:
-            - Fix_BackEnd_GraphQL_DeleteCategory
+            - Fix_Merge_Repository
         paths:
             - 'BackEnd/Domains/Products/GetProductsByCategory/**'
 jobs:
